// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Save Doesn't update single relation without cascade update 1`] = `Array []`;

exports[`Save Doesn't update single relation without cascade update 2`] = `
Object {
  "id": "i:1",
  "prop1": "s:abc",
}
`;

exports[`Save Saves cyclic relation with cascade inserting 1`] = `
Array [
  Object {
    "b": "e:B:1",
    "id": "i:1",
    "prop": "s:I'm a",
  },
  Object {
    "a": "e:A:1",
    "id": "i:1",
    "prop": "s:I'm b",
  },
]
`;

exports[`Save Saves only changed properties 1`] = `
Array [
  Array [
    "multi",
  ],
  Array [
    "srem",
    "e:A:1:set1",
    "i:1",
  ],
  Array [
    "sadd",
    "e:A:1:set1",
    "i:4",
  ],
  Array [
    "hdel",
    "e:A:1",
    "prop1",
  ],
  Array [
    "hmset",
    "e:A:1",
    "prop3",
    "d:1447146610000",
    "prop4",
    "j:{\\"a\\":\\"abc\\",\\"d\\":8}",
    "prop5",
    "s:abcdef",
  ],
  Array [
    "hdel",
    "e:A:1:map1",
    "s:1",
  ],
  Array [
    "hmset",
    "e:A:1:map1",
    "i:2",
    "s:number2",
  ],
  Array [
    "exec",
  ],
]
`;

exports[`Save Saves only changed properties 2`] = `
Array [
  Object {
    "id": "i:1",
    "map1": "m:e:A:1:map1",
    "prop3": "d:1447146610000",
    "prop4": "j:{\\"a\\":\\"abc\\",\\"d\\":8}",
    "prop5": "s:abcdef",
    "set1": "a:e:A:1:set1",
  },
  Object {
    "i:1": "s:number1",
    "i:2": "s:number2",
    "i:3": "d:1478769010000",
  },
  Array [
    "i:4",
    "b:1",
    "s:3",
    "i:2",
  ],
]
`;

exports[`Save Saves only changed properties 3`] = `
Array [
  Array [
    "multi",
  ],
  Array [
    "del",
    "e:A:1:set1",
  ],
  Array [
    "del",
    "e:A:1:map1",
  ],
  Array [
    "hdel",
    "e:A:1",
    "set1",
    "map1",
  ],
  Array [
    "exec",
  ],
]
`;

exports[`Save Saves only changed properties 4`] = `
Array [
  Object {
    "id": "i:1",
    "prop3": "d:1447146610000",
    "prop4": "j:{\\"a\\":\\"abc\\",\\"d\\":8}",
    "prop5": "s:abcdef",
  },
  null,
  Array [],
]
`;

exports[`Save Saves simple entity 1`] = `
Array [
  Object {
    "boolProp": "b:1",
    "id": "i:1",
    "map1": "m:e:A:1:map1",
    "prop1": "s:abc",
    "prop3": "d:1478769010000",
    "prop4": "j:{\\"a\\":\\"abc\\",\\"d\\":5}",
    "prop5": "null",
    "set1": "a:e:A:1:set1",
  },
  Object {
    "i:1": "s:number1",
    "i:2": "b:1",
    "i:3": "d:1478769010000",
    "s:1": "s:string1",
  },
  Array [
    "b:1",
    "s:3",
    "i:1",
    "i:2",
  ],
]
`;

exports[`Save Saves single relation with cascade inserting 1`] = `
Array [
  Object {
    "id": "i:1",
    "rel": "e:Rel:1",
  },
  Object {
    "id": "i:1",
    "prop": "s:rel",
  },
]
`;

exports[`Save Saves single relation without cascade inserting 1`] = `
Array [
  Object {
    "id": "i:1",
    "rel": "e:Rel:1",
  },
  null,
]
`;

exports[`Save Updates single relation with with cascade updating 1`] = `
Array [
  Array [
    "multi",
  ],
  Array [
    "hmset",
    "e:A:1",
    "prop1",
    "s:cde",
  ],
  Array [
    "exec",
  ],
]
`;

exports[`Save Updates single relation with with cascade updating 2`] = `
Object {
  "id": "i:1",
  "prop1": "s:cde",
}
`;
